--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'com.google.gms.google-services'
     id 'kotlin-parcelize'
+    id  'kotlin-kapt'
 }
 
 android {
@@ -10,7 +11,6 @@ android {
     buildFeatures {
         viewBinding true
     }
-
 
     defaultConfig {
         applicationId "com.dr.udaan"
@@ -64,4 +64,12 @@ dependencies {
     implementation 'io.github.chaosleung:pinview:1.4.4'
     implementation 'com.intuit.sdp:sdp-android:1.1.0'
 
+    //room
+
+    implementation "androidx.room:room-runtime:2.4.3"
+    kapt "androidx.room:room-compiler:2.4.3"
+    implementation "androidx.room:room-ktx:2.4.3"
+
+    //noinspection LifecycleAnnotationProcessorWithJava8
+    kapt "androidx.lifecycle:lifecycle-compiler:2.5.1"
 }
