--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.gms.google-services'
-    id 'kotlin-parcelize'
-    id  'kotlin-kapt'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -11,6 +10,7 @@ android {
     buildFeatures {
         viewBinding true
     }
+
 
     defaultConfig {
         applicationId "com.dr.udaan"
@@ -64,12 +64,12 @@ dependencies {
     implementation 'io.github.chaosleung:pinview:1.4.4'
     implementation 'com.intuit.sdp:sdp-android:1.1.0'
 
-    //room
-
+    //Room
     implementation "androidx.room:room-runtime:2.4.3"
     kapt "androidx.room:room-compiler:2.4.3"
     implementation "androidx.room:room-ktx:2.4.3"
 
-    //noinspection LifecycleAnnotationProcessorWithJava8
-    kapt "androidx.lifecycle:lifecycle-compiler:2.5.1"
+    // For Payment Checkout
+    implementation 'com.razorpay:checkout:1.6.26'
+
 }
