--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,4 +72,7 @@ dependencies {
     // For Payment Checkout
     implementation 'com.razorpay:checkout:1.6.26'
 
+    // For Image load
+    implementation "io.coil-kt:coil:2.2.2"
+
 }
