--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,15 +10,26 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/udaan"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/udaan"
         android:supportsRtl="true"
         android:theme="@style/Theme.TestPaper"
         tools:targetApi="31">
+
         <activity
-            android:name=".MyWebViewer"
+            android:name=".authentication.Register"
             android:exported="false" />
+        <activity
+            android:name=".authentication.Login"
+            android:exported="false" />
+        <activity
+            android:name=".authentication.OtpLogin"
+            android:exported="false" />
+        <activity
+            android:name=".authentication.ForgotPassword"
+            android:exported="false" />
+
         <activity
             android:name="com.dr.udaan.MainActivity"
             android:exported="false" />
